<resources>
    <string name="app_name">CRUDJoaquinFernandez</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="headset_list">Headset List</string>
    <string name="checkbox">Microfono</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="sino">Bluetooth</string>
    <string name="errorAddHeadset">Error cosas</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="microfono">Microfono</string>
    <string name="actualizar">Actualizar</string>
    <string name="buscar">Buscar</string>
    <string name="borrar">Borrar</string>
    <string name="a_adir">Añadir</string>
    <string name="cosas">cosas</string>
    <string name="cambiar_pantalla">Cambiar Pantalla</string>
    <string name="headset">headset</string>
    <string name="foto_cosas">foto cosas</string>
    <string name="noElements">No hay más elementos</string>
    <string name="correct">Todo correcto</string>
    <string name="setID">Introduce un id</string>
    <string name="idNotSet">ID no introducido</string>
    <string name="notFound">No encontrado</string>
    <string name="fillAllTheFields">Rellena todos los campos</string>
    <string name="deleteActivity">Eliminar</string>
    <string name="deleteQuestion">Seguro que quieres borrarlo?</string>
    <string name="menu">menu</string>
    <string name="button_to_detail_screen">Button to detail screen</string>
    <string name="about_info">about_info</string>
    <string name="lista_de_modelos">Lista de Modelos</string>
    <string name="a_adir_modelos">añadir modelos</string>
    <string name="delete_button">delete button</string>
    <string name="detail_button">detail button</string>
    <string name="button_to_store_list">button to store List</string>
    <string name="add_store">Add Store</string>
</resources>